# kotodama-battle

./: .gitignore  README.md  pyproject.toml
server/: app.py  config.py  session.py  transcriber.py
static/: tts.mjs  worklet.js
tests/: test_session.py
web/: game.html  spell-judge.js
