[project]
name = "kotodama-battle"
version = "0.1.0"
description = "Kotodama Battle — voice-controlled AR spell arcade (STT + local LLM + WebGPU TTS)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "faster-whisper>=1.0.0",
    "numpy>=1.26",
]

[project.scripts]
kotodama-battle = "server.app:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
